--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Canvas Watch</title>
+    <link rel="icon" type="image/png" href="resources/icon-clock.webp" />
     <style>
       body {
         margin: 0;
